crates/sql-orm/tests/ui/active_record_missing_entity_set.stderr
error[E0277]: the trait bound `AppDbContext: DbContextEntitySet<User>` is not satisfied
  --> tests/ui/active_record_missing_entity_set.rs:26:29
   |
26 |         let _ = User::query(db);
   |                 ----------- ^^ unsatisfied trait bound
   |                 |
   |                 required by a bound introduced by this call
   |
   = help: the trait `DbContextEntitySet<User>` is not implemented for `AppDbContext`
           but trait `DbContextEntitySet<Order>` is implemented for it
   = help: for that trait implementation, expected `Order`, found `User`
note: required by a bound in `query`
  --> src/active_record.rs
   |
   |     fn query<C>(db: &C) -> DbSetQuery<Self>
   |        ----- required by a bound in this associated function
   |     where
   |         C: DbContextEntitySet<Self>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ActiveRecord::query`
